--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
   <head>
     <title>{{ page.title }} - The Sashnov Alexander's home page</title>
     <style type="text/css" media="all">@import "style/default.css";</style>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="shortcut icon" href="img/icon.png" />
     <link rel="Alternate StyleSheet" href="style/black.css" type="text/css" title="Black" />
     <meta name="keywords" content="Sashnov, develop, programming, {{ page.keywords }}" />
