--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="img/icon.png" />
     <link rel="Alternate StyleSheet" href="style/black.css" type="text/css" title="Black" />
     <meta name="keywords" content="Sashnov, develop, programming, {{ page.keywords }}" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
     <meta name="author" content="Sashnov Alexander" />
     <meta name="description" content="{{ page.description }}" />
   </head>
